# DHT-Implementation

./: .gitignore  CMakeLists.txt  README.md
include/: functions.cpp  functions.hpp
other/: bakery.cpp
other/data/: bakery.txt
other/include/: bakery.hpp
src/: client.cpp  mainServer.cpp  server.cpp  server0.cpp  server1.cpp  server2.cpp
